fix img size on small screeens

--- a/app/assets/stylesheets/themes/mintone/customers.scss
+++ b/app/assets/stylesheets/themes/mintone/customers.scss
@@ -7,8 +7,7 @@
   max-height: 56px;
 }
 
-#photo img {
-  max-width: 240px;
+.customer-img {
   max-height: 180px;
 }
 
